fix(positioning): bump down the z-index to 100 so it appears under popovers

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -20,6 +20,6 @@
 @media (max-width: $RESPONSIVE) {
 	:host([responsive]) {
 		position: relative;
-		z-index: 200;
+		z-index: 100;
 	}
 }
